k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: email-service
  ports:
    - protocol: TCP
      port: 8080         
      targetPort: 8080
